--- a/Ch2_Functions/BetterWay_20-21_eyShin.ipynb
+++ b/Ch2_Functions/BetterWay_20-21_eyShin.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "source": [
     "* 키워드로 인수를 넘기는 방법은 파이썬의 강력한 기능\n",
-    "* 키워드 인수의 유언성 --> 쓰임새가 분명하게 코드 작성 가능\n",
+    "* 키워드 인수의 유연성 --> 쓰임새가 분명하게 코드 작성 가능\n",
     "* 예시) 어떤 숫자를 다른 숫자로 나눌 때 (아쉬운 예시)\n",
     "  * ZeroDivisionError 예외를 무시하고 무한대값을 반환하거나\n",
     "  * OverflowError 예외를 무시하고 0을 반환하고 싶음"
@@ -656,7 +656,7 @@
     "* 키워드 인수는 함수 호출의 의도를 더 명확하게 해준다.\n",
     "* 특히 bool 플래그를 여러개 받는 함수처럼 헷갈리기 쉬운 함수를 호출할 때 키워드 인수를 넘기게 하려면 키워드 전용 인수를 사용하자.\n",
     "* 파이썬 3는 함수의 키워드 전용 인수 문법을 명시적으로 지원한다.\n",
-    "* 파이썬 2에서는 `**kwargs` 를 사용하고 TypeError 예외를 직접 일의는 방법으로 함수의 키워드 전용 인수를 흉내낼 수 있다."
+    "* 파이썬 2에서는 `**kwargs` 를 사용하고 TypeError 예외를 직접 일으키는 방법으로 함수의 키워드 전용 인수를 흉내낼 수 있다."
    ]
   }
  ],
