update Better Way 41

--- a/Ch5_ConcurrencyAndParallelism/BetterWay_41_YChoi.ipynb
+++ b/Ch5_ConcurrencyAndParallelism/BetterWay_41_YChoi.ipynb
@@ -255,6 +255,58 @@
     "#     __spec__ = \"ModuleSpec(name='builtins', loader=<class '_frozen_importlib.BuiltinImporter'>)\"\n",
     "#     main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "속도가 향상되는 것을 확인 가능."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ProcessPoolExecutor 클래스가 (multiprocessing 모듈이 제공하는 저수준 구조를 이용해) 실제로 하는 작업\n",
+    "\n",
+    "1. numbers 입력 데이터에서 map으로 각 아이템을 가져온다.\n",
+    "2. pickle 모듈을 사용하여 바이너리 데이터로 직렬화한다(**BW44**).\n",
+    "3. 주 인터프리터 프로세스에서 직렬화한 데이터를 지역 소켓을 통해 자식 인터프리터 프로세스로 복사한다.\n",
+    "4. 자식 프로세스에서 pickle을 사용하여 데이터를 파이썬 객체로 역직렬화한다.\n",
+    "5. gcd 함수가 들어 있는 파이썬 모듈을 임포트한다.\n",
+    "6. 다른 자식 프로세스를 사용하여 병렬로 입력 데이터에 함수를 실행한다.\n",
+    "7. 결과를 다시 바이트로 직렬화한다.\n",
+    "8. 소켓을 통해 바이트를 다시 복사한다.\n",
+    "9. 바이트를 부모 프로세스에 있는 파이썬 객체로 역직렬화한다.\n",
+    "10. 마지막으로 여러 자식에 있는 결과를 반환용 리스트 한 개로 합친다.\n",
+    "\n",
+    "\n",
+    "* `multiprocessing`\n",
+    "    - 부모와 자식 프로세스 간에 일어날 수밖에 없는 모든 직렬화와 역직렬화 때문에 비용이 높음.\n",
+    "    - 고립되고 지렛대 효과가 큰 특정 유형의 작업에 적합.\n",
+    "        + **고립(isolated)**: 프로그램의 다른 부분과 상태를 공유할 필요가 없음.\n",
+    "        + **지렛대 효과가 큼(high-leverage)**: 부모와 자식 프로세스 사이에서 데이터를 조금만 전송해도 많은 양의 계산이 일어나야 함.\n",
+    "            + 최대공약수 계산 알고리즘이 한 예.\n",
+    "            + 이외의 다른 수학적 알고리즘도 대부분 비슷하게 동작.\n",
+    "    - 이러한 유형의 계산이 아닌 경우?\n",
+    "        + `multiprocessing` 비용이 병렬성을 통한 속도 향상을 막을 수 있음.\n",
+    "        + `mutiprocessing`은 이런 상황에 쓸 수 있는 공유 메모리, 프로세스 간 잠금, 큐, 프록시 같은 고급 기능을 제공하지만 지나치게 복잡함.\n",
+    "    - 결론?\n",
+    "        + **`multiprocessing`의 모든 기능을 직접 사용하지 말고, 더 간단한 `concurrent.futures` 모듈을 통해 사용하는 것을 권장.**\n",
+    "            + `ThreadPoolExecutor` 클래스를 사용하여 고립되고 지렛대 효과가 큰 함수를 스레드에서 실행하는 것부터 시작.\n",
+    "            + 추후 속도를 향상하려면 `ProcessPoolExecutor`클래스를 사용.\n",
+    "            + `multiprocessing` 모듈의 직접 사용은 마지막으로 고려.\n",
+    "            \n",
+    "\n",
+    "## 핵심 정리\n",
+    "* CPU 병목점을 C 확장 모듈로 옮기기:\n",
+    "    - 장점: 파이썬 코드에 최대한 투자하면서 성능을 개선할 수 있는 효과적인 방법.\n",
+    "    - 단점: 비용이 많이 들어가고 버그가 생길 수 있음.\n",
+    "* 다른 해결책: `multiprocessing` 모듈\n",
+    "    - 파이썬에서 특정 유형의 계산을 최소한의 노력으로 병렬화할 수 있는 강력한 도구를 제공.\n",
+    "* `multiprocessing`의 강력한 기능은 `concurrent.futures` 및 그 안의 간단한 `ProcessPoolExecutor` 클래스로 접근하는 게 가장 좋음.\n",
+    "* `multiprocessing` 모듈의 고급 기능은 너무 복잡하므로 피하는 것을 권장."
+   ]
   }
  ],
  "metadata": {
